# Agentixx

./: .clang-format  CMakeLists.txt  README.md  check.sh  format.sh
cmake/: AgentixxConfig.cmake.in
conan/: conandata.yml  conanfile.py
conan/test_package/: CMakeLists.txt  conanfile.py  test_agentixx.cpp
examples/: CMakeLists.txt  basic_example.cpp  deepseek_example.cpp  env_example.cpp  multiple_providers_example.cpp  streaming_example.cpp
include/agentixx/: agentixx.hpp
include/agentixx/core/: http_client.hpp  response.hpp  streaming.hpp  types.hpp
include/agentixx/llm/: llm_interface.hpp  openai_adapter.hpp
src/core/: http_client.cpp  response.cpp
src/llm/: openai_adapter.cpp
